backend: modify endpoint for non friends